// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT fQkLTT sc-avfBU ftlsoV sc-kmQMkS kXrFbl"
    >
      <h3
        class="sc-gWXaA-D bfOJSR sc-cCcYRi kVjTpC"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT fQkLTT sc-avfBU dNEumG sc-kmQMkS kXrFbl"
    >
      <h3
        class="sc-gWXaA-D bfOJSR sc-cCcYRi kVjTpC"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
